# public-weather

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  main.py
backend/api/: deps.py
backend/api/routes/: auth.py  forecasts.py  regions.py
backend/core/: config.py  security.py
backend/db/: database.py  repositories.py
backend/schemas/: auth.py  forecast.py
frontend/: Dockerfile  app.py
